Polish main ingame menu (closes #2008)